# LLM-based-agent-for-Driver-Fatigue-detection-and-mitigation

./: README.md
docker/: Dockerfile
docker/src/data_sync/: CMakeLists.txt  package.xml
docker/src/data_sync/msg/: SyncedOutput.msg
feature_extraction/: README.md  camera_pipeline.py  carla_data_feature_extraction.py  fatigue_estimation.py
input_signal_processing/: README.md  data_process.py  data_process_only_sync.py
input_signal_processing/src/: bag_writer_for_offline_data.py  preprocess_node.py  sync_node.py
llm_and_fatigue_handling/: generate_fatigue_labels.py  llm_node.py
llm_and_fatigue_handling/llama2_7B/: README.md  captured_data.csv  simple_faiss_vd.py  simple_fine_tuning_pipeline.py  simple_inference.py  simple_input_process.py
llm_and_fatigue_handling/llama2_7B_with_prefix_adapter_vector/: README.md  dummy_data.csv  fine_tuning_pipeline.py  inference_v2.ipynb  input_process.py  model_wrapper_with_mlp_adapter.py
llm_and_fatigue_handling/tiny_llama/: README.md  tinyllama_faiss_vd.py  tinyllama_fine_tuning_pipeline.py  tinyllama_inference.ipynb
vector_database/: README.md  faiss_vd.py
